inserção do alert ao abrir a página

--- a/index.html
+++ b/index.html
@@ -224,6 +224,20 @@
     <!--FIM DO BLOCO DA PROMOÇÃO-->
 
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script>
+    Swal.fire({
+      title: '<strong>ATENÇÃO</strong>',
+      icon: 'info',
+      html:
+        'Essa página é apenas para uso interno! <br>' +
+        'Não compartilhe com nenhum cliente. ',
+      focusConfirm: false,
+      confirmButtonText:
+        '<i class="fa fa-thumbs-up"></i> OK!',
+      confirmButtonAriaLabel: 'Thumbs up, great!',
+    })
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 
