--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
         <div id="collapse-politica-1" class="accordion-collapse collapse" data-bs-parent="#accordion-politica-comercial">
           <div class="accordion-body">
             <div class="d-grid gap-2 ">
-              <a href="./politicas-comerciais/155-23_POLÍTICA_COMERCIAL_BR_CORTE_ZEBU_01-09-23.pdf" target="_blank" class="btn btn-primary">Corte Zebu</a>
-              <a href="./politicas-comerciais/154-23_POLÍTICA_COMERCIAL_BR_CORTE_EUROPEU_01-09-23.pdf" target="_blank" class="btn btn-primary">Corte Europeu</a>
+              <a href="./politicas-comerciais/166-23_POLÍTICA_COMERCIAL_BR_CORTE_ZEBU_01-10-23.pdf" target="_blank" class="btn btn-primary">Corte Zebu</a>
+              <a href="./politicas-comerciais/165-23_POLÍTICA_COMERCIAL_BR_CORTE_EUROPEU_01-10-23.pdf" target="_blank" class="btn btn-primary">Corte Europeu</a>
               <hr>
-              <a href="./politicas-comerciais/153-23_POLÍTICA_COMERCIAL_BR_LEITE ZEBU_01-09-23.pdf" target=" _blank" class="btn btn-primary">Leite Zebu</a>
+              <a href="./politicas-comerciais/164-23_POLÍTICA_COMERCIAL_BR_LEITE ZEBU_01-10-23.pdf" target=" _blank" class="btn btn-primary">Leite Zebu</a>
               <a href="./politicas-comerciais/152-23_POLÍTICA_COMERCIAL_BR_LEITE_EUROPEU_01-09-23.pdf" target="_blank" class="btn btn-primary">Leite Europeu</a>
             </div>
           </div>
@@ -104,7 +104,7 @@
               <a href="./politicas-comerciais/125-23_POLÍTICA_COMERCIAL_EMBRIÕES_CORTE_EUROPEU_01-07-23.pdf" target="_blank" class="btn btn-primary">Corte Europeu</a>
               <hr>
               <a href="./politicas-comerciais/148-23_POLÍTICA_COMERCIAL_EMBRIÕES_LEITE_ZEBU_01-09-23.pdf" target="_blank" class="btn btn-primary">Leite Zebu</a>
-              <a href="./politicas-comerciais/123-23_POLÍTICA_COMERCIAL_EMBRIÕES_LEITE_EUROPEU_01-07-23.pdf" target="_blank" class="btn btn-primary">Leite Europeu</a>
+              <a href="./politicas-comerciais/168-23_POLÍTICA_COMERCIAL_EMBRIÕES_LEITE_EUROPEU_01-10-23.pdf" target="_blank" class="btn btn-primary">Leite Europeu</a>
             </div>
           </div>
         </div>
@@ -112,116 +112,7 @@
     </div>
     <hr>
     <h1>Promoções</h1>
-
-    <!--BLOCO DE PROMOÇÃO-->
-    <div class="card mb-3 text-center">
-      <div class="card-header">
-        <h5 class="card-title">PLENA ESTAÇÃO</h5>
-        <p class="card-text">CORTE</p>
-      </div>
-      <div class="card-body">
-        <!--DCO-->
-        <div class="d-grid gap-2 mb-3">
-          <a href="./promocoes/plena-estacao/146-23 CAMPANHA PLENA ESTAÇÃO 2023 - 01-09-23.pdf" target="_blank" class="btn btn-primary">
-            <i class="fa-solid fa-info"></i>
-            DCO
-          </a>
-        </div>
-        <!--ACCORDION DOS MATERIAIS DA PROMOÇÃO-->
-        <!--LEMBRAR DE TROCAR O ID DO ACCORDION-->
-        <div class="accordion accordion-flush" id="accordion-promocao-1">
-          <div class="accordion-item">
-            <h2 class="accordion-header">
-              <!--data-bs-target e arial-controls deve ser igual ao id do collapse-->
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-promocao-1" aria-expanded="false" aria-controls="collapse-promocao-1">
-                Material da Campanha
-              </button>
-            </h2>
-            <!--trocar o id do collapse para não dar conflito-->
-            <div id="collapse-promocao-1" class="accordion-collapse collapse" data-bs-parent="#accordion-promocao-1">
-              <div class="accordion-body">
-                <!--MATERIAIS DA PROMOÇÃO-->
-                <div class="d-grid gap-2 ">
-                  <a href="./promocoes/plena-estacao/DCO_Campanha_Plena_Estação_CRV_Corte_Zebu_01.pdf" target="_blank" class="btn btn-primary">
-                    <i class="fa-solid fa-file-invoice-dollar"></i>
-                    Preços - Zebu
-                  </a>
-                  <a href="./promocoes/plena-estacao/Catálogo ZEBU - PLENA ESTAÇÃO 2023_.pdf" target="_blank" class="btn btn-primary">
-                    <i class="fa-solid fa-book"></i>
-                    Catálogo - Zebu
-                  </a>
-                  <hr>
-                  <a href="./promocoes/plena-estacao/DCO_Campanha_Plena_Estação_CRV_Corte_Europeu_01.pdf" target="_blank" class="btn btn-primary ">
-                    <i class="fa-solid fa-file-invoice-dollar"></i>
-                    Preços - Europeu
-                  </a>
-                  <a href="./promocoes/plena-estacao/Catálogo EUROPEU - PLENA ESTAÇÃO 2023.pdf" target="_blank" class="btn btn-primary">
-                    <i class="fa-solid fa-book"></i>
-                    Catálogo - Europeu
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!--VALIDADE DA CAMPANHA - RADAPÉ-->
-      <div class="card-footer text-body-secondary">
-        Validade: 30 de Setembro de 2023
-      </div>
-    </div>
-    <!--FIM DO BLOCO DA PROMOÇÃO-->
-
-    <!--BLOCO DE PROMOÇÃO-->
-    <div class="card mb-3 text-center">
-      <div class="card-header">
-        <h5 class="card-title">O ANO NOVO É AGORA</h5>
-        <p class="card-text">LEITE</p>
-      </div>
-      <div class="card-body">
-        <!--DCO-->
-        <div class="d-grid gap-2 mb-3">
-          <a href="./promocoes/ano-novo-e-agora/145-23 CAMPANHA O ANO NOVO É AGORA 01-09-23.pdf" target="_blank" class="btn btn-primary">
-            <i class="fa-solid fa-info"></i>
-            DCO
-          </a>
-        </div>
-        <!--ACCORDION DOS MATERIAIS DA PROMOÇÃO-->
-        <!--LEMBRAR DE TROCAR O ID DO ACCORDION-->
-        <div class="accordion accordion-flush" id="accordion-promocao-2">
-          <div class="accordion-item">
-            <h2 class="accordion-header">
-              <!--data-bs-target e arial-controls deve ser igual ao id do collapse-->
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-promocao-2" aria-expanded="false" aria-controls="collapse-promocao-2">
-                Material da Campanha
-              </button>
-            </h2>
-            <!--trocar o id do collapse para não dar conflito-->
-            <div id="collapse-promocao-2" class="accordion-collapse collapse" data-bs-parent="#accordion-promocao-2">
-              <div class="accordion-body">
-                <!--MATERIAIS DA PROMOÇÃO-->
-                <div class="d-grid gap-2 ">
-                  <a href="./promocoes/ano-novo-e-agora/Catálogo_O_Ano_Novo_é_Agora_CRV_Leite_Zebu_Com_Links.pdf" target="_blank" class="btn btn-primary">
-                    <i class="fa-solid fa-book"></i>
-                    Catálogo - Zebu
-                  </a>
-                  <hr>
-                  <a href="./promocoes/ano-novo-e-agora/Catálogo_O_Ano_Novo_é_Agora_CRV_Leite_Europeu_Com_Links.pdf" target="_blank" class="btn btn-primary">
-                    <i class="fa-solid fa-book"></i>
-                    Catálogo - Europeu
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!--VALIDADE DA CAMPANHA - RADAPÉ-->
-      <div class="card-footer text-body-secondary">
-        Validade: 30 de Setembro de 2023
-      </div>
-    </div>
-    <!--FIM DO BLOCO DA PROMOÇÃO-->
+    <h4 class="text-danger">Nenhuma promoção vigente no momento!</h4>
 
   </div>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
