inserção das campanhas out/24

--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
               Parcelamento
             </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="promocoes/herdoptimizer/REGULAMENTO HERDOPTIMIZER.pdf">
+              <i class="fa-solid fa-cow"></i>
+              Herdoptimizer
+            </a>
+          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               <i class="fa-brands fa-readme"></i>
@@ -82,7 +88,7 @@
         <div id="collapse-politica-1" class="accordion-collapse collapse" data-bs-parent="#accordion-politica-comercial">
           <div class="accordion-body">
             <div class="d-grid gap-2 ">
-              <a href="./politicas-comerciais/166-23_POLÍTICA_COMERCIAL_BR_CORTE_ZEBU_01-10-23.pdf" target="_blank" class="btn btn-primary">Corte Zebu</a>
+              <a href="./politicas-comerciais/170-23_POLÍTICA_COMERCIAL_BR_CORTE_ZEBU_03-10-23 (1).pdf" target="_blank" class="btn btn-primary">Corte Zebu</a>
               <a href="./politicas-comerciais/165-23_POLÍTICA_COMERCIAL_BR_CORTE_EUROPEU_01-10-23.pdf" target="_blank" class="btn btn-primary">Corte Europeu</a>
               <hr>
               <a href="./politicas-comerciais/164-23_POLÍTICA_COMERCIAL_BR_LEITE ZEBU_01-10-23.pdf" target=" _blank" class="btn btn-primary">Leite Zebu</a>
@@ -112,7 +118,122 @@
     </div>
     <hr>
     <h1>Promoções</h1>
-    <h4 class="text-danger">Nenhuma promoção vigente no momento!</h4>
+    <!--
+      <h4 class="text-danger">Nenhuma promoção vigente no momento!</h4>
+    -->
+ <!--BLOCO DE PROMOÇÃO-->
+ <div class="card mb-3 text-center">
+  <div class="card-header">
+    <!--TÍTULO DA CAMPANHA-->
+    <h5 class="card-title">SAFRA NOVA CRV</h5>
+    <!--PASTA DE ATUAÇÃO DA CAMPANHA-->
+    <p class="card-text">CORTE</p>
+  </div>
+  <div class="card-body">
+    <!--DCO-->
+    <div class="d-grid gap-2 mb-3">
+      <a href="./promocoes/safra-nova/DCO.pdf" target="_blank" class="btn btn-primary">
+        <i class="fa-solid fa-info"></i>
+        DCO
+      </a>
+    </div>
+    <!--ACCORDION DOS MATERIAIS DA PROMOÇÃO-->
+    <!--LEMBRAR DE TROCAR O ID DO ACCORDION-->
+    <div class="accordion accordion-flush" id="accordion-promocao-1">
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <!--data-bs-target e arial-controls deve ser igual ao id do collapse-->
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-promocao-1" aria-expanded="false" aria-controls="collapse-promocao-1">
+            Material da Campanha
+          </button>
+        </h2>
+        <!--trocar o id do collapse para não dar conflito-->
+        <div id="collapse-promocao-1" class="accordion-collapse collapse" data-bs-parent="#accordion-promocao-1">
+          <div class="accordion-body">
+            <!--MATERIAIS DA PROMOÇÃO-->
+            <div class="d-grid gap-2 ">
+              <a href="./promocoes/safra-nova/preços-zebu.pdf" target="_blank" class="btn btn-primary">
+                <i class="fa-solid fa-file-invoice-dollar"></i>
+                Preços - Zebu
+              </a>
+              <a href="./promocoes/safra-nova/CATÁLOGO SAFRA NOVA - ZEBU.pdf" target="_blank" class="btn btn-primary">
+                <i class="fa-solid fa-book"></i>
+                Catálogo - Zebu
+              </a>
+              <hr>
+              <a href="./promocoes/safra-nova/preços-europeu.pdf" target="_blank" class="btn btn-primary ">
+                <i class="fa-solid fa-file-invoice-dollar"></i>
+                Preços - Europeu
+              </a>
+              <a href="./promocoes/safra-nova/CATÁLOGO SAFRA NOVA - EUROPEU.pdf" target="_blank" class="btn btn-primary">
+                <i class="fa-solid fa-book"></i>
+                Catálogo - Europeu
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--VALIDADE DA CAMPANHA - RADAPÉ-->
+  <div class="card-footer text-body-secondary">
+    Validade: 31 de Outubro de 2023
+  </div>
+</div>
+<!--FIM DO BLOCO DA PROMOÇÃO-->
+
+
+ <!--BLOCO DE PROMOÇÃO-->
+ <div class="card mb-3 text-center">
+  <div class="card-header">
+    <!--TÍTULO DA CAMPANHA-->
+    <h5 class="card-title">O PROGRESSO DO LEITE</h5>
+    <!--PASTA DE ATUAÇÃO DA CAMPANHA-->
+    <p class="card-text">LEITE</p>
+  </div>
+  <div class="card-body">
+    <!--DCO-->
+    <div class="d-grid gap-2 mb-3">
+      <a href="./promocoes/progresso-do-leite/DCO.pdf" target="_blank" class="btn btn-primary">
+        <i class="fa-solid fa-info"></i>
+        DCO
+      </a>
+    </div>
+    <!--ACCORDION DOS MATERIAIS DA PROMOÇÃO-->
+    <!--LEMBRAR DE TROCAR O ID DO ACCORDION-->
+    <div class="accordion accordion-flush" id="accordion-promocao-2">
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <!--data-bs-target e arial-controls deve ser igual ao id do collapse-->
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-promocao-2" aria-expanded="false" aria-controls="collapse-promocao-2">
+            Material da Campanha
+          </button>
+        </h2>
+        <!--trocar o id do collapse para não dar conflito-->
+        <div id="collapse-promocao-2" class="accordion-collapse collapse" data-bs-parent="#accordion-promocao-2">
+          <div class="accordion-body">
+            <!--MATERIAIS DA PROMOÇÃO-->
+            <div class="d-grid gap-2 ">
+              <a href="./promocoes/progresso-do-leite/preço-zebu.pdf" target="_blank" class="btn btn-primary">
+                <i class="fa-solid fa-file-invoice-dollar"></i>
+                Preços - Zebu
+              </a>
+              <a href="./promocoes/progresso-do-leite/preço-europeu_compressed.pdf" target="_blank" class="btn btn-primary ">
+                <i class="fa-solid fa-file-invoice-dollar"></i>
+                Preços - Europeu
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--VALIDADE DA CAMPANHA - RADAPÉ-->
+  <div class="card-footer text-body-secondary">
+    Validade: 31 de Outubro de 2023 (18h)
+  </div>
+</div>
+<!--FIM DO BLOCO DA PROMOÇÃO-->
 
   </div>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
