inserção de promoção

--- a/index.html
+++ b/index.html
@@ -218,9 +218,18 @@
                 <i class="fa-solid fa-file-invoice-dollar"></i>
                 Preços - Zebu
               </a>
+              <a href="./promocoes/progresso-do-leite/catalogo-zebu.pdf" target="_blank" class="btn btn-primary">
+                <i class="fa-solid fa-book"></i>
+                Catálogo - Zebu
+              </a>
+              <hr>
               <a href="./promocoes/progresso-do-leite/preço-europeu_compressed.pdf" target="_blank" class="btn btn-primary ">
                 <i class="fa-solid fa-file-invoice-dollar"></i>
                 Preços - Europeu
+              </a>
+              <a href="./promocoes/progresso-do-leite/catalogo-europeu.pdf" target="_blank" class="btn btn-primary">
+                <i class="fa-solid fa-book"></i>
+                Catálogo - Europeu
               </a>
             </div>
           </div>
@@ -231,6 +240,58 @@
   <!--VALIDADE DA CAMPANHA - RADAPÉ-->
   <div class="card-footer text-body-secondary">
     Validade: 31 de Outubro de 2023 (18h)
+  </div>
+</div>
+<!--FIM DO BLOCO DA PROMOÇÃO-->
+
+ <!--BLOCO DE PROMOÇÃO-->
+ <div class="card mb-3 text-center">
+  <div class="card-header">
+    <!--TÍTULO DA CAMPANHA-->
+    <h5 class="card-title">ESPECIAL TOURO DO MÊS</h5>
+    <!--PASTA DE ATUAÇÃO DA CAMPANHA-->
+    <p class="card-text">LEITE</p>
+  </div>
+  <div class="card-body">
+    <!--DCO-->
+    <div class="d-grid gap-2 mb-3">
+      <a href="./promocoes/touro_outubro/161-23 - CAMPANHA ESPECIAL TOURO DO MÊS 01-10-23.pdf" target="_blank" class="btn btn-primary">
+        <i class="fa-solid fa-info"></i>
+        DCO
+      </a>
+    </div>
+    <!--ACCORDION DOS MATERIAIS DA PROMOÇÃO-->
+    <!--LEMBRAR DE TROCAR O ID DO ACCORDION-->
+    <div class="accordion accordion-flush" id="accordion-promocao-3">
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <!--data-bs-target e arial-controls deve ser igual ao id do collapse-->
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-promocao-3" aria-expanded="false" aria-controls="collapse-promocao-3">
+            Material da Campanha
+          </button>
+        </h2>
+        <!--trocar o id do collapse para não dar conflito-->
+        <div id="collapse-promocao-3" class="accordion-collapse collapse" data-bs-parent="#accordion-promocao-3">
+          <div class="accordion-body">
+            <!--MATERIAIS DA PROMOÇÃO-->
+            <div class="d-grid gap-2 ">
+              <a href="./promocoes/touro_outubro/ICH Robe Dollar.pdf" target="_blank" class="btn btn-primary">
+                <i class="fa-solid fa-book"></i>
+                Catálogo 
+              </a>
+              <a href="https://drive.google.com/file/d/1QeLqtcaAaWJMnVDytHKb2S18JX5Fj_iG/view?usp=sharing" target="_blank" class="btn btn-primary ">
+                <i class="fa-solid fa-video"></i>
+                Vídeo do Touro
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--VALIDADE DA CAMPANHA - RADAPÉ-->
+  <div class="card-footer text-body-secondary">
+    Validade: 31 de Outubro de 2023
   </div>
 </div>
 <!--FIM DO BLOCO DA PROMOÇÃO-->
