--- a/condicao-comercial/condicao-comercial.html
+++ b/condicao-comercial/condicao-comercial.html
@@ -73,63 +73,76 @@
   </nav>
   <div class="container">
     <!--TESTE DE CONDIÇÃO COMERCIAL-->
-    <h1>Teste de Condição</h1>
-    <form name="calculo">
-      <div class="mb-3">
-        <div class="input-group mb-3">
-          <span class="input-group-text" id="basic-addon1">R$</span>
-          <input inputmode="numeric" type="text" name="valor" id="valor" onkeyup="calcula()" class="form-control" placeholder="Insira aqui o valor do pedido.">
+    <!--
+      <h1>Teste de Condição</h1>
+      <form name="calculo">
+        <div class="mb-3">
+          <div class="input-group mb-3">
+            <span class="input-group-text" id="basic-addon1">R$</span>
+            <input inputmode="numeric" type="text" name="valor" id="valor" onkeyup="calcula()" class="form-control" placeholder="Insira aqui o valor do pedido.">
+          </div>
         </div>
+        <div class="mb-3">
+          <p>Selecione o tipo de condição</p>
+          <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item">
+                <input class="form-check-input " type="radio" name="pasta" id="corte" value="corte" onkeyup="calcula()" checked>
+                <label class="form-check-label" for="corte">Corte</label>
+              </li>
+              <li class="breadcrumb-item" aria-current="page">
+                <input class="form-check-input" type="radio" name="pasta" id="leite" value="leite" onkeyup="calcula()">
+                <label class="form-check-label" for="leite">Leite</label>
+              </li>
+            </ol>
+          </nav>
+      </form>
+      <div class="mb-3 text-center">
+        <h5>Condição Máxima Permitida</h5>
+        <h3 id="result">-</h3>
       </div>
-      <div class="mb-3">
-        <p>Selecione o tipo de condição</p>
-        <nav aria-label="breadcrumb">
-          <ol class="breadcrumb">
-            <li class="breadcrumb-item">
-              <input class="form-check-input " type="radio" name="pasta" id="corte" value="corte" onkeyup="calcula()" checked>
-              <label class="form-check-label" for="corte">Corte</label>
-            </li>
-            <li class="breadcrumb-item" aria-current="page">
-              <input class="form-check-input" type="radio" name="pasta" id="leite" value="leite" onkeyup="calcula()">
-              <label class="form-check-label" for="leite">Leite</label>
-            </li>
-          </ol>
-        </nav>
-    </form>
+      <hr>
 
-    <div class="mb-3 text-center">
-      <h5>Condição Máxima Permitida</h5>
-      <h3 id="result">-</h3>
-    </div>
-    <hr>
+    -->
+
 
     <!--CONDIÇÃO COMERCIAL-->
-    <h1>Condição Comercial</h1>
-    <div class="accordion accordion-flush" id="accordion-condicao-comercial">
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-condicao-1" aria-expanded="false" aria-controls="collapse-condicao-1">
-            Corte
-          </button>
-        </h2>
-        <div id="collapse-condicao-1" class="accordion-collapse collapse" data-bs-parent="#accordion-condicao-comercial">
-          <div class="accordion-body text-center">
-            <img src="condicao-corte.jpg" class="img-fluid" alt="Condição Comercial Corte">
+    <!--
+      <div class="accordion accordion-flush" id="accordion-condicao-comercial">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-condicao-1" aria-expanded="false" aria-controls="collapse-condicao-1">
+              Corte
+            </button>
+          </h2>
+          <div id="collapse-condicao-1" class="accordion-collapse collapse" data-bs-parent="#accordion-condicao-comercial">
+            <div class="accordion-body text-center">
+              <img src="condicao-corte.jpg" class="img-fluid" alt="Condição Comercial Corte">
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-condicao-2" aria-expanded="false" aria-controls="collapse-condicao-2">
+              Leite
+            </button>
+          </h2>
+          <div id="collapse-condicao-2" class="accordion-collapse collapse" data-bs-parent="#accordion-condicao-comercial">
+            <div class="accordion-body text-center">
+              <img src="condicao-leite.jpg" class="img-fluid" alt="COndição Comercial Leite">
+            </div>
           </div>
         </div>
       </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-condicao-2" aria-expanded="false" aria-controls="collapse-condicao-2">
-            Leite
-          </button>
-        </h2>
-        <div id="collapse-condicao-2" class="accordion-collapse collapse" data-bs-parent="#accordion-condicao-comercial">
-          <div class="accordion-body text-center">
-            <img src="condicao-leite.jpg" class="img-fluid" alt="COndição Comercial Leite">
-          </div>
-        </div>
-      </div>
+
+    -->
+    <h1 class="text-center">Condição Comercial</h1>
+    
+    <div class="text-center mb-3">
+      <img src="condicao-corte.jpg" class="img-fluid" alt="Condição Comercial Corte">
+    </div>
+    <div class="text-center mb-3">
+      <img src="condicao-leite.jpg" class="img-fluid" alt="COndição Comercial Leite">
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
