--- a/condicao-comercial/condicao-comercial.html
+++ b/condicao-comercial/condicao-comercial.html
@@ -43,6 +43,12 @@
               Parcelamento
             </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../promocoes/herdoptimizer/REGULAMENTO HERDOPTIMIZER.pdf">
+              <i class="fa-solid fa-cow"></i>
+              Herdoptimizer
+            </a>
+          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               <i class="fa-brands fa-readme"></i>
