--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CRV LAGOA</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="style-navButton.css">
   <script src="https://kit.fontawesome.com/9dd9d649b8.js" crossorigin="anonymous"></script>
@@ -17,7 +18,8 @@
       <!--LOGO-->
       <a class="navbar-brand" href=""><strong>CRV Brazil</strong></a>
       <!--BOTÃO DE EXPANDIR MENU (MOBILE)-->
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-expanded="false" aria-controls="collapseExample">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
+        aria-expanded="false" aria-controls="collapseExample">
         <div id="navMenu">
           <span></span><span></span><span></span>
         </div>
@@ -27,7 +29,8 @@
         <ul class="navbar-nav flex-grow-1">
           <li class="nav-item">
 
-            <a class="nav-link" target="_blank" href="https://drive.google.com/drive/folders/1GS4X6uBFDWpUAGAZ1diNRfR8M-mhgRaT">
+            <a class="nav-link" target="_blank"
+              href="https://drive.google.com/drive/folders/1GS4X6uBFDWpUAGAZ1diNRfR8M-mhgRaT">
               <i class="fa-brands fa-google-drive"></i>
               Google Drive
             </a>
@@ -84,36 +87,48 @@
     <div class="accordion accordion-flush" id="accordion-politica-comercial">
       <div class="accordion-item">
         <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-politica-1" aria-expanded="false" aria-controls="collapse-politica-1">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#collapse-politica-1" aria-expanded="false" aria-controls="collapse-politica-1">
             Sêmen
           </button>
         </h2>
-        <div id="collapse-politica-1" class="accordion-collapse collapse" data-bs-parent="#accordion-politica-comercial">
+        <div id="collapse-politica-1" class="accordion-collapse collapse"
+          data-bs-parent="#accordion-politica-comercial">
           <div class="accordion-body">
             <div class="d-grid gap-2 ">
-              <a href="./politicas-comerciais/170-23_POLÍTICA_COMERCIAL_BR_CORTE_ZEBU_03-10-23 (1).pdf" target="_blank" class="btn btn-primary">Corte Zebu</a>
-              <a href="./politicas-comerciais/165-23_POLÍTICA_COMERCIAL_BR_CORTE_EUROPEU_01-10-23.pdf" target="_blank" class="btn btn-primary">Corte Europeu</a>
+              <a href="./politicas-comerciais/CORTE-ZEBU.pdf" target="_blank"
+                class="btn btn-primary">Corte Zebu</a>
+              <a href="./politicas-comerciais/CORTE-EUROPEU.pdf" target="_blank"
+                class="btn btn-primary">Corte Europeu</a>
               <hr>
-              <a href="./politicas-comerciais/164-23_POLÍTICA_COMERCIAL_BR_LEITE ZEBU_01-10-23.pdf" target=" _blank" class="btn btn-primary">Leite Zebu</a>
-              <a href="./politicas-comerciais/152-23_POLÍTICA_COMERCIAL_BR_LEITE_EUROPEU_01-09-23.pdf" target="_blank" class="btn btn-primary">Leite Europeu</a>
+              <a href="./politicas-comerciais/LEITE-ZEBU.pdf" target=" _blank"
+                class="btn btn-primary">Leite Zebu</a>
+              <a href="./politicas-comerciais/LEITE-EUROPEU.pdf" target="_blank"
+                class="btn btn-primary">Leite Europeu</a>
             </div>
           </div>
         </div>
       </div>
       <div class="accordion-item">
         <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-politica-2" aria-expanded="false" aria-controls="collapse-politica-2">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#collapse-politica-2" aria-expanded="false" aria-controls="collapse-politica-2">
             Embrião
           </button>
         </h2>
-        <div id="collapse-politica-2" class="accordion-collapse collapse" data-bs-parent="#accordion-politica-comercial">
+        <div id="collapse-politica-2" class="accordion-collapse collapse"
+          data-bs-parent="#accordion-politica-comercial">
           <div class="accordion-body">
             <div class="d-grid gap-2 ">
-              <a href="./politicas-comerciais/150-23_POLÍTICA_COMERCIAL_EMBRIÕES_CORTE_ZEBU_01-09-23.pdf" target="_blank" class="btn btn-primary">Corte Zebu</a>
-              <a href="./politicas-comerciais/125-23_POLÍTICA_COMERCIAL_EMBRIÕES_CORTE_EUROPEU_01-07-23.pdf" target="_blank" class="btn btn-primary">Corte Europeu</a>
+              <a href="./politicas-comerciais/EMB-CORTE-ZEBU.pdf"
+                target="_blank" class="btn btn-primary">Corte Zebu</a>
+              <a href="./politicas-comerciais/EMB-CORTE-EUROPEU.pdf"
+                target="_blank" class="btn btn-primary">Corte Europeu</a>
               <hr>
-              <a href="./politicas-comerciais/148-23_POLÍTICA_COMERCIAL_EMBRIÕES_LEITE_ZEBU_01-09-23.pdf" target="_blank" class="btn btn-primary">Leite Zebu</a>
-              <a href="./politicas-comerciais/168-23_POLÍTICA_COMERCIAL_EMBRIÕES_LEITE_EUROPEU_01-10-23.pdf" target="_blank" class="btn btn-primary">Leite Europeu</a>
+              <a href="./politicas-comerciais/EMB-LEITE-ZEBU.pdf"
+                target="_blank" class="btn btn-primary">Leite Zebu</a>
+              <a href="./politicas-comerciais/EMB-LEITE-EUROPEU.pdf"
+                target="_blank" class="btn btn-primary">Leite Europeu</a>
             </div>
           </div>
         </div>
@@ -124,180 +139,89 @@
     <!--
       <h4 class="text-danger">Nenhuma promoção vigente no momento!</h4>
     -->
- <!--BLOCO DE PROMOÇÃO-->
- <div class="card mb-3 text-center">
-  <div class="card-header">
-    <!--TÍTULO DA CAMPANHA-->
-    <h5 class="card-title">SAFRA NOVA CRV</h5>
-    <!--PASTA DE ATUAÇÃO DA CAMPANHA-->
-    <p class="card-text">CORTE</p>
-  </div>
-  <div class="card-body">
-    <!--DCO-->
-    <div class="d-grid gap-2 mb-3">
-      <a href="./promocoes/safra-nova/DCO.pdf" target="_blank" class="btn btn-primary">
-        <i class="fa-solid fa-info"></i>
-        DCO
-      </a>
-    </div>
-    <!--ACCORDION DOS MATERIAIS DA PROMOÇÃO-->
-    <!--LEMBRAR DE TROCAR O ID DO ACCORDION-->
-    <div class="accordion accordion-flush" id="accordion-promocao-1">
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <!--data-bs-target e arial-controls deve ser igual ao id do collapse-->
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-promocao-1" aria-expanded="false" aria-controls="collapse-promocao-1">
-            Material da Campanha
-          </button>
-        </h2>
-        <!--trocar o id do collapse para não dar conflito-->
-        <div id="collapse-promocao-1" class="accordion-collapse collapse" data-bs-parent="#accordion-promocao-1">
-          <div class="accordion-body">
-            <!--MATERIAIS DA PROMOÇÃO-->
-            <div class="d-grid gap-2 ">
-              <a href="./promocoes/safra-nova/preços-zebu.pdf" target="_blank" class="btn btn-primary">
-                <i class="fa-solid fa-file-invoice-dollar"></i>
-                Preços - Zebu
-              </a>
-              <a href="./promocoes/safra-nova/CATÁLOGO SAFRA NOVA - ZEBU.pdf" target="_blank" class="btn btn-primary">
-                <i class="fa-solid fa-book"></i>
-                Catálogo - Zebu
-              </a>
-              <hr>
-              <a href="./promocoes/safra-nova/preços-europeu.pdf" target="_blank" class="btn btn-primary ">
-                <i class="fa-solid fa-file-invoice-dollar"></i>
-                Preços - Europeu
-              </a>
-              <a href="./promocoes/safra-nova/CATÁLOGO SAFRA NOVA - EUROPEU.pdf" target="_blank" class="btn btn-primary">
-                <i class="fa-solid fa-book"></i>
-                Catálogo - Europeu
-              </a>
+    <!--BLOCO DE PROMOÇÃO-->
+    <div class="card mb-3 text-center">
+      <div class="card-header">
+        <!--TÍTULO DA CAMPANHA-->
+        <h5 class="card-title">Blackout</h5>
+        <!--PASTA DE ATUAÇÃO DA CAMPANHA-->
+        <p class="card-text">CORTE & LEITE</p>
+      </div>
+      <div class="card-body">
+        <!--DCO-->
+        <div class="d-grid gap-2 mb-3">
+          <a href="./promocoes/blackout/dco.pdf" target="_blank" class="btn btn-primary">
+            <i class="fa-solid fa-info"></i>
+            DCO
+          </a>
+        </div>
+        <!--ACCORDION DOS MATERIAIS DA PROMOÇÃO-->
+        <!--LEMBRAR DE TROCAR O ID DO ACCORDION-->
+        <div class="accordion accordion-flush" id="accordion-promocao-1">
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <!--data-bs-target e arial-controls deve ser igual ao id do collapse-->
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapse-promocao-1" aria-expanded="false" aria-controls="collapse-promocao-1">
+                Material da Campanha
+              </button>
+            </h2>
+            <!--trocar o id do collapse para não dar conflito-->
+            <div id="collapse-promocao-1" class="accordion-collapse collapse" data-bs-parent="#accordion-promocao-1">
+              <div class="accordion-body">
+                <!--MATERIAIS DA PROMOÇÃO-->
+                <div class="d-grid gap-2 ">
+                  <h5>Preços</h5>
+                  <a href="./promocoes/blackout/preco-corte-zebu.pdf" target="_blank" class="btn btn-primary">
+                    <i class="fa-solid fa-file-invoice-dollar"></i>
+                    Corte Zebu
+                  </a>
+                  <a href="./promocoes/blackout/preco-corte-europeu.pdf" target="_blank" class="btn btn-primary">
+                    <i class="fa-solid fa-file-invoice-dollar"></i>
+                    Corte Europeu
+                  </a>
+                  <a href="./promocoes/blackout/preco-leite-zebu.pdf" target="_blank" class="btn btn-primary">
+                    <i class="fa-solid fa-file-invoice-dollar"></i>
+                    Leite Zebu
+                  </a>
+                  <a href="./promocoes/blackout/preco-leite-europeu.pdf" target="_blank" class="btn btn-primary">
+                    <i class="fa-solid fa-file-invoice-dollar"></i>
+                    Leite Europeu
+                  </a>
+                  <hr>
+                  <h5>Catálogos</h5>
+                  <a href="./promocoes/blackout/cat-corte-zebu.pdf" target="_blank"
+                    class="btn btn-primary">
+                    <i class="fa-solid fa-book"></i>
+                    Corte Zebu
+                  </a>
+                  <a href="./promocoes/blackout/cat-corte-europeu.pdf" target="_blank"
+                    class="btn btn-primary">
+                    <i class="fa-solid fa-book"></i>
+                    Corte Europeu
+                  </a>
+                  <a href="./promocoes/blackout/cat-leite-zebu.pdf" target="_blank"
+                    class="btn btn-primary">
+                    <i class="fa-solid fa-book"></i>
+                    Leite Zebu
+                  </a>
+                  <a href="./promocoes/blackout/cat-leite-europeu.pdf" target="_blank"
+                    class="btn btn-primary">
+                    <i class="fa-solid fa-book"></i>
+                    Leite Europeu
+                  </a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
-  <!--VALIDADE DA CAMPANHA - RADAPÉ-->
-  <div class="card-footer text-body-secondary">
-    Validade: 31 de Outubro de 2023
-  </div>
-</div>
-<!--FIM DO BLOCO DA PROMOÇÃO-->
-
-
- <!--BLOCO DE PROMOÇÃO-->
- <div class="card mb-3 text-center">
-  <div class="card-header">
-    <!--TÍTULO DA CAMPANHA-->
-    <h5 class="card-title">O PROGRESSO DO LEITE</h5>
-    <!--PASTA DE ATUAÇÃO DA CAMPANHA-->
-    <p class="card-text">LEITE</p>
-  </div>
-  <div class="card-body">
-    <!--DCO-->
-    <div class="d-grid gap-2 mb-3">
-      <a href="./promocoes/progresso-do-leite/DCO.pdf" target="_blank" class="btn btn-primary">
-        <i class="fa-solid fa-info"></i>
-        DCO
-      </a>
-    </div>
-    <!--ACCORDION DOS MATERIAIS DA PROMOÇÃO-->
-    <!--LEMBRAR DE TROCAR O ID DO ACCORDION-->
-    <div class="accordion accordion-flush" id="accordion-promocao-2">
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <!--data-bs-target e arial-controls deve ser igual ao id do collapse-->
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-promocao-2" aria-expanded="false" aria-controls="collapse-promocao-2">
-            Material da Campanha
-          </button>
-        </h2>
-        <!--trocar o id do collapse para não dar conflito-->
-        <div id="collapse-promocao-2" class="accordion-collapse collapse" data-bs-parent="#accordion-promocao-2">
-          <div class="accordion-body">
-            <!--MATERIAIS DA PROMOÇÃO-->
-            <div class="d-grid gap-2 ">
-              <a href="./promocoes/progresso-do-leite/preço-zebu.pdf" target="_blank" class="btn btn-primary">
-                <i class="fa-solid fa-file-invoice-dollar"></i>
-                Preços - Zebu
-              </a>
-              <a href="./promocoes/progresso-do-leite/catalogo-zebu.pdf" target="_blank" class="btn btn-primary">
-                <i class="fa-solid fa-book"></i>
-                Catálogo - Zebu
-              </a>
-              <hr>
-              <a href="./promocoes/progresso-do-leite/preço-europeu_compressed.pdf" target="_blank" class="btn btn-primary ">
-                <i class="fa-solid fa-file-invoice-dollar"></i>
-                Preços - Europeu
-              </a>
-              <a href="./promocoes/progresso-do-leite/catalogo-europeu.pdf" target="_blank" class="btn btn-primary">
-                <i class="fa-solid fa-book"></i>
-                Catálogo - Europeu
-              </a>
-            </div>
-          </div>
-        </div>
+      <!--VALIDADE DA CAMPANHA - RADAPÉ-->
+      <div class="card-footer text-body-secondary">
+        Validade: 31 de Novembro de 2023
       </div>
     </div>
-  </div>
-  <!--VALIDADE DA CAMPANHA - RADAPÉ-->
-  <div class="card-footer text-body-secondary">
-    Validade: 31 de Outubro de 2023 (18h)
-  </div>
-</div>
-<!--FIM DO BLOCO DA PROMOÇÃO-->
-
- <!--BLOCO DE PROMOÇÃO-->
- <div class="card mb-3 text-center">
-  <div class="card-header">
-    <!--TÍTULO DA CAMPANHA-->
-    <h5 class="card-title">ESPECIAL TOURO DO MÊS</h5>
-    <!--PASTA DE ATUAÇÃO DA CAMPANHA-->
-    <p class="card-text">LEITE</p>
-  </div>
-  <div class="card-body">
-    <!--DCO-->
-    <div class="d-grid gap-2 mb-3">
-      <a href="./promocoes/touro_outubro/161-23 - CAMPANHA ESPECIAL TOURO DO MÊS 01-10-23.pdf" target="_blank" class="btn btn-primary">
-        <i class="fa-solid fa-info"></i>
-        DCO
-      </a>
-    </div>
-    <!--ACCORDION DOS MATERIAIS DA PROMOÇÃO-->
-    <!--LEMBRAR DE TROCAR O ID DO ACCORDION-->
-    <div class="accordion accordion-flush" id="accordion-promocao-3">
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <!--data-bs-target e arial-controls deve ser igual ao id do collapse-->
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-promocao-3" aria-expanded="false" aria-controls="collapse-promocao-3">
-            Material da Campanha
-          </button>
-        </h2>
-        <!--trocar o id do collapse para não dar conflito-->
-        <div id="collapse-promocao-3" class="accordion-collapse collapse" data-bs-parent="#accordion-promocao-3">
-          <div class="accordion-body">
-            <!--MATERIAIS DA PROMOÇÃO-->
-            <div class="d-grid gap-2 ">
-              <a href="./promocoes/touro_outubro/ICH Robe Dollar.pdf" target="_blank" class="btn btn-primary">
-                <i class="fa-solid fa-book"></i>
-                Catálogo 
-              </a>
-              <a href="https://drive.google.com/file/d/1QeLqtcaAaWJMnVDytHKb2S18JX5Fj_iG/view?usp=sharing" target="_blank" class="btn btn-primary ">
-                <i class="fa-solid fa-video"></i>
-                Vídeo do Touro
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!--VALIDADE DA CAMPANHA - RADAPÉ-->
-  <div class="card-footer text-body-secondary">
-    Validade: 31 de Outubro de 2023
-  </div>
-</div>
-<!--FIM DO BLOCO DA PROMOÇÃO-->
+    <!--FIM DO BLOCO DA PROMOÇÃO-->
 
   </div>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -320,7 +244,9 @@
       navMenu.classList.toggle("active")
     })
   </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
