ajuste da política comercial

--- a/condicao-comercial/condicao-comercial.html
+++ b/condicao-comercial/condicao-comercial.html
@@ -145,10 +145,19 @@
     <h1 class="text-center">Condição Comercial</h1>
     
     <div class="text-center mb-3">
-      <img src="condicao-corte.jpg" class="img-fluid" alt="Condição Comercial Corte">
+      <img src="SEMEN-CORTE.png" class="img-fluid" alt="Condição Comercial Corte">
     </div>
     <div class="text-center mb-3">
-      <img src="condicao-leite.jpg" class="img-fluid" alt="COndição Comercial Leite">
+      <img src="SEMEN-LEITE.png" class="img-fluid" alt="Condição Comercial Leite">
+    </div>
+    <div class="text-center mb-3">
+      <img src="EMBRIOES.png" class="img-fluid" alt="Condição Comercial Embriões">
+    </div>
+    <div class="text-center mb-3">
+      <img src="MATERIAIS.png" class="img-fluid" alt="COndição Comercial Materiais IA e Botijão">
+    </div>
+    <div class="text-center mb-3">
+      <img src="PRETACAO-SERVICO.png" class="img-fluid" alt="COndição Comercial Prestação de Serviço">
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
