ajuste da política comercial

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
   <div class="container">
     <!--POLÍTICA COMERCIAL-->
     <h1>Política Comercial</h1>
+    <h6>Dezembro/2023</h6>
     <div class="accordion accordion-flush" id="accordion-politica-comercial">
       <div class="accordion-item">
         <h2 class="accordion-header">
