Promoção de dezembro/23

--- a/index.html
+++ b/index.html
@@ -144,14 +144,14 @@
     <div class="card mb-3 text-center">
       <div class="card-header">
         <!--TÍTULO DA CAMPANHA-->
-        <h5 class="card-title">Blackout</h5>
+        <h5 class="card-title">Touro da Virada</h5>
         <!--PASTA DE ATUAÇÃO DA CAMPANHA-->
         <p class="card-text">CORTE & LEITE</p>
       </div>
       <div class="card-body">
         <!--DCO-->
         <div class="d-grid gap-2 mb-3">
-          <a href="./promocoes/blackout/dco.pdf" target="_blank" class="btn btn-primary">
+          <a href="./promocoes/virada/DCO.pdf" target="_blank" class="btn btn-primary">
             <i class="fa-solid fa-info"></i>
             DCO
           </a>
@@ -173,42 +173,20 @@
                 <!--MATERIAIS DA PROMOÇÃO-->
                 <div class="d-grid gap-2 ">
                   <h5>Preços</h5>
-                  <a href="./promocoes/blackout/preco-corte-zebu.pdf" target="_blank" class="btn btn-primary">
+                  <a href="./promocoes/virada/PREÇOS-CORTE-ZEBU.pdf" target="_blank" class="btn btn-primary">
                     <i class="fa-solid fa-file-invoice-dollar"></i>
                     Corte Zebu
                   </a>
-                  <a href="./promocoes/blackout/preco-corte-europeu.pdf" target="_blank" class="btn btn-primary">
+                  <a href="./promocoes/virada/PREÇOS-CORTE-EUROPEU.pdf" target="_blank" class="btn btn-primary">
                     <i class="fa-solid fa-file-invoice-dollar"></i>
                     Corte Europeu
                   </a>
-                  <a href="./promocoes/blackout/preco-leite-zebu.pdf" target="_blank" class="btn btn-primary">
+                  <a href="./promocoes/virada/PREÇOS-LEITE-ZEBU.pdf" target="_blank" class="btn btn-primary">
                     <i class="fa-solid fa-file-invoice-dollar"></i>
                     Leite Zebu
                   </a>
-                  <a href="./promocoes/blackout/preco-leite-europeu.pdf" target="_blank" class="btn btn-primary">
+                  <a href="./promocoes/virada/PREÇOS-LEITE-EUROPEU.pdf" target="_blank" class="btn btn-primary">
                     <i class="fa-solid fa-file-invoice-dollar"></i>
-                    Leite Europeu
-                  </a>
-                  <hr>
-                  <h5>Catálogos</h5>
-                  <a href="./promocoes/blackout/cat-corte-zebu.pdf" target="_blank"
-                    class="btn btn-primary">
-                    <i class="fa-solid fa-book"></i>
-                    Corte Zebu
-                  </a>
-                  <a href="./promocoes/blackout/cat-corte-europeu.pdf" target="_blank"
-                    class="btn btn-primary">
-                    <i class="fa-solid fa-book"></i>
-                    Corte Europeu
-                  </a>
-                  <a href="./promocoes/blackout/cat-leite-zebu.pdf" target="_blank"
-                    class="btn btn-primary">
-                    <i class="fa-solid fa-book"></i>
-                    Leite Zebu
-                  </a>
-                  <a href="./promocoes/blackout/cat-leite-europeu.pdf" target="_blank"
-                    class="btn btn-primary">
-                    <i class="fa-solid fa-book"></i>
                     Leite Europeu
                   </a>
                 </div>
@@ -219,7 +197,7 @@
       </div>
       <!--VALIDADE DA CAMPANHA - RADAPÉ-->
       <div class="card-footer text-body-secondary">
-        Validade: 31 de Novembro de 2023
+        Validade: 31 de Janeiro de 2024 (às 18:00h)
       </div>
     </div>
     <!--FIM DO BLOCO DA PROMOÇÃO-->
