inserção dos catálogos da promoção

--- a/index.html
+++ b/index.html
@@ -172,22 +172,44 @@
               <div class="accordion-body">
                 <!--MATERIAIS DA PROMOÇÃO-->
                 <div class="d-grid gap-2 ">
-                  <h5>Preços</h5>
+                  <h6>Corte Zebu</h6>
                   <a href="./promocoes/virada/PREÇOS-CORTE-ZEBU.pdf" target="_blank" class="btn btn-primary">
                     <i class="fa-solid fa-file-invoice-dollar"></i>
-                    Corte Zebu
+                    Lista de Preços
                   </a>
+                  <a href="./promocoes/virada/CATALOGO-CORTE-ZEBU.pdf" target="_blank" class="btn btn-primary">
+                    <i class="fa-solid fa-book"></i>
+                    Catálogo
+                  </a>
+                  <hr>
+                  <h6>Corte Europeu</h6>
                   <a href="./promocoes/virada/PREÇOS-CORTE-EUROPEU.pdf" target="_blank" class="btn btn-primary">
                     <i class="fa-solid fa-file-invoice-dollar"></i>
-                    Corte Europeu
+                    Lista de Preços
                   </a>
+                  <a href="./promocoes/virada/CATALOGO-CORTE-EUROPEU.pdf" target="_blank" class="btn btn-primary">
+                    <i class="fa-solid fa-book"></i>
+                    Catálogo
+                  </a>
+                  <hr>
+                  <h6>Leite Zebu</h6>
                   <a href="./promocoes/virada/PREÇOS-LEITE-ZEBU.pdf" target="_blank" class="btn btn-primary">
                     <i class="fa-solid fa-file-invoice-dollar"></i>
-                    Leite Zebu
+                    Lista de Preços
                   </a>
+                  <a href="./promocoes/virada/CATALOGO-LEITE-ZEBU.pdf" target="_blank" class="btn btn-primary">
+                    <i class="fa-solid fa-book"></i>
+                    Catálogo
+                  </a>
+                  <hr>
+                  <h6>Leite Europeu</h6>
                   <a href="./promocoes/virada/PREÇOS-LEITE-EUROPEU.pdf" target="_blank" class="btn btn-primary">
                     <i class="fa-solid fa-file-invoice-dollar"></i>
-                    Leite Europeu
+                    Lista de Preços
+                  </a>
+                  <a href="./promocoes/virada/CATALOGO-LEITE-EUROPEU.pdf" target="_blank" class="btn btn-primary">
+                    <i class="fa-solid fa-book"></i>
+                    Catálogo
                   </a>
                 </div>
               </div>
