inserção de borda no accordion

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         </div>
         <!--ACCORDION DOS MATERIAIS DA PROMOÇÃO-->
         <!--LEMBRAR DE TROCAR O ID DO ACCORDION-->
-        <div class="accordion accordion-flush" id="accordion-promocao-1">
+        <div class="accordion accordion-flush border" id="accordion-promocao-1">
           <div class="accordion-item">
             <h2 class="accordion-header">
               <!--data-bs-target e arial-controls deve ser igual ao id do collapse-->
