inserção das políticas comerciais janeiro/24

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   <div class="container">
     <!--POLÍTICA COMERCIAL-->
     <h1>Política Comercial</h1>
-    <h6>Dezembro/2023</h6>
+    <h6>Janeiro/2024</h6>
     <div class="accordion accordion-flush" id="accordion-politica-comercial">
       <div class="accordion-item">
         <h2 class="accordion-header">
@@ -97,14 +97,14 @@
           data-bs-parent="#accordion-politica-comercial">
           <div class="accordion-body">
             <div class="d-grid gap-2 ">
-              <a href="./politicas-comerciais/CORTE-ZEBU.pdf" target="_blank"
+              <a href="./politicas-comerciais/SE-CORTE-ZEBU.pdf" target="_blank"
                 class="btn btn-primary">Corte Zebu</a>
-              <a href="./politicas-comerciais/CORTE-EUROPEU.pdf" target="_blank"
+              <a href="./politicas-comerciais/SE-CORTE-EUROPEU.pdf" target="_blank"
                 class="btn btn-primary">Corte Europeu</a>
               <hr>
-              <a href="./politicas-comerciais/LEITE-ZEBU.pdf" target=" _blank"
+              <a href="./politicas-comerciais/SE-LEITE-ZEBU.pdf" target=" _blank"
                 class="btn btn-primary">Leite Zebu</a>
-              <a href="./politicas-comerciais/LEITE-EUROPEU.pdf" target="_blank"
+              <a href="./politicas-comerciais/SE-LEITE-EUROPEU.pdf" target="_blank"
                 class="btn btn-primary">Leite Europeu</a>
             </div>
           </div>
