--- a/condicao-comercial/condicao-comercial.html
+++ b/condicao-comercial/condicao-comercial.html
@@ -10,13 +10,18 @@
   <script src="https://kit.fontawesome.com/9dd9d649b8.js" crossorigin="anonymous"></script>
   <script type="text/javascript" src="../libs/jquery-3.6.0.min.js"></script>
   <script type="text/javascript" src="../libs/jquery.mask.min.js"></script>
+  <style>
+    body {
+      background-color: aliceblue;
+    }
+  </style>
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg border-bottom shadow-sm mb-3">
     <div class="container">
       <!--LOGO-->
-      <a class="navbar-brand" href="/index.html"><strong>CRV Brazil</strong></a>
+      <a class="navbar-brand" href="../index.html"><strong>CRV Brazil</strong></a>
       <!--BOTÃO DE EXPANDIR MENU (MOBILE)-->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
         aria-expanded="false" aria-controls="collapseExample">
