ajuste no link do herdoptimizer na página de condição comercial

--- a/condicao-comercial/condicao-comercial.html
+++ b/condicao-comercial/condicao-comercial.html
@@ -58,7 +58,7 @@
               Serviços
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" target="_blank" href="/promocoes/herdoptimizer/REGULAMENTO HERDOPTIMIZER.pdf">
+              <li><a class="dropdown-item" target="_blank" href="../promocoes/herdoptimizer/REGULAMENTO HERDOPTIMIZER.pdf">
                   <i class="fa-solid fa-cow"></i>
                   Herdoptimizer
                 </a>
