inserção das promoções e politicas comerciais de março de 2024

--- a/index.html
+++ b/index.html
@@ -58,14 +58,22 @@
               Serviços
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" target="_blank" href="promocoes/herdoptimizer/REGULAMENTO HERDOPTIMIZER.pdf">
+              <li>
+                <a class="dropdown-item" target="_blank" href="promocoes/herdoptimizer/REGULAMENTO HERDOPTIMIZER.pdf">
                   <i class="fa-solid fa-cow"></i>
                   Herdoptimizer
                 </a>
               </li>
-              <li><a class="dropdown-item" target="_blank" href="http://rastreabilidade.crvbrasil.com.br/">
+              <li>
+                <a class="dropdown-item" target="_blank" href="http://rastreabilidade.crvbrasil.com.br/">
                   <i class="fa-solid fa-file-medical"></i>
                   Consultar Partida
+                </a>
+              </li>
+              <li>
+                <a class="dropdown-item" target="_blank" href="./servicos/Lista_Contatos_Internos_CRV_28-02-24 1.pdf">
+                  <i class="fa-solid fa-address-book"></i>
+                  Contatos CRV
                 </a>
               </li>
             </ul>
@@ -182,14 +190,14 @@
     <div class="card mb-3 text-center">
       <div class="card-header">
         <!--TÍTULO DA CAMPANHA-->
-        <h5 class="card-title">Fertilidade Máxima</h5>
+        <h5 class="card-title">Força do Leite</h5>
         <!--PASTA DE ATUAÇÃO DA CAMPANHA-->
-        <p class="card-text">CORTE</p>
+        <p class="card-text">LEITE EUROPEU</p>
       </div>
       <div class="card-body">
         <!--DCO-->
         <div class="d-grid gap-2 mb-3">
-          <a href="./promocoes/fertilidade-maxima/dco.pdf" target="_blank" class="btn btn-primary">
+          <a href="./promocoes/FORCA-DO-LEITE/DCO-FORCA-DO-LEITE.pdf" target="_blank" class="btn btn-primary">
             <i class="fa-solid fa-info"></i>
             DCO
           </a>
@@ -210,21 +218,16 @@
               <div class="accordion-body">
                 <!--MATERIAIS DA PROMOÇÃO-->
                 <div class="d-grid gap-2 ">
-                  <h6>Corte Zebu</h6>
-                  <a href="./promocoes/fertilidade-maxima/PRECO-CORTE-ZEBU.pdf" target="_blank" class="btn btn-primary">
+                  <h6>Leite Europeu</h6>
+                  <a href="./promocoes/FORCA-DO-LEITE/PRECO-CONVENCIONAL.pdf" target="_blank" class="btn btn-primary">
                     <i class="fa-solid fa-file-invoice-dollar"></i>
-                    Lista de Preços
+                    Preços - Convencional
                   </a>
-                  <a href="./promocoes/fertilidade-maxima/CAT-CORTE-ZEBU.pdf" target="_blank" class="btn btn-primary">
-                    <i class="fa-solid fa-book"></i>
-                    Catálogo
-                  </a>
-                  <h6>Corte Europeu</h6>
-                  <a href="./promocoes/fertilidade-maxima/PRECO-CORTE-EUROPEU.pdf" target="_blank" class="btn btn-primary">
+                  <a href="./promocoes/FORCA-DO-LEITE/PRECO-SEXADO.pdf" target="_blank" class="btn btn-primary">
                     <i class="fa-solid fa-file-invoice-dollar"></i>
-                    Lista de Preços
+                    Preços - Sexado
                   </a>
-                  <a href="./promocoes/fertilidade-maxima/CAT-CORTE-EUROPEU (2).pdf" target="_blank" class="btn btn-primary">
+                  <a href="./promocoes/FORCA-DO-LEITE/CATALOGO-TOUROS.pdf" target="_blank" class="btn btn-primary">
                     <i class="fa-solid fa-book"></i>
                     Catálogo
                   </a>
@@ -236,7 +239,7 @@
       </div>
       <!--VALIDADE DA CAMPANHA - RADAPÉ-->
       <div class="card-footer text-body-secondary">
-        Validade: 29 de Fevereiro de 2024 (às 18:00h)
+      Validade: 31 de Março de 2024 (às 18:00h)
       </div>
     </div>
     <!--FIM DO BLOCO DA PROMOÇÃO-->
@@ -245,14 +248,14 @@
     <div class="card mb-3 text-center">
       <div class="card-header">
         <!--TÍTULO DA CAMPANHA-->
-        <h5 class="card-title">Antecipa Estação</h5>
+        <h5 class="card-title">Porteira Aberta</h5>
         <!--PASTA DE ATUAÇÃO DA CAMPANHA-->
-        <p class="card-text">LEITE</p>
+        <p class="card-text">CORTE ZEBU, CORTE EUROPEU E LEITE ZEBU</p>
       </div>
       <div class="card-body">
         <!--DCO-->
         <div class="d-grid gap-2 mb-3">
-          <a href="./promocoes/antecipa-estacao/dco.pdf" target="_blank" class="btn btn-primary">
+          <a href="./promocoes/PORTEIRA-ABERTA/DCO-PORTEIRA-ABERTA.pdf" target="_blank" class="btn btn-primary">
             <i class="fa-solid fa-info"></i>
             DCO
           </a>
@@ -274,28 +277,33 @@
                 <!--MATERIAIS DA PROMOÇÃO-->
                 <div class="d-grid gap-2 ">
                   <h6>Leite Zebu</h6>
-                  <a href="./promocoes/antecipa-estacao/PRECO-CONVENCIONAL-LEITE-ZEBU.pdf" target="_blank" class="btn btn-primary">
+                  <a href="./promocoes/PORTEIRA-ABERTA/PRECO-LEITE-ZEBU-CONVENCIONAL.pdf" target="_blank" class="btn btn-primary">
                     <i class="fa-solid fa-file-invoice-dollar"></i>
-                    Preço Sêmen Convencional
+                    Preços - Convencional
                   </a>
-                  <a href="./promocoes/antecipa-estacao/PRECO-SEXADO-LEITE-ZEBU.pdf" target="_blank" class="btn btn-primary">
+                  <a href="./promocoes/PORTEIRA-ABERTA/PRECO-LEITE-ZEBU-SEXADO.pdf" target="_blank" class="btn btn-primary">
                     <i class="fa-solid fa-file-invoice-dollar"></i>
-                    Preço Sêmen Sexado
+                    Preços - Sexado
                   </a>
-                  <a href="./promocoes/antecipa-estacao/CAT-LEITE-ZEBU.pdf" target="_blank" class="btn btn-primary">
+                  <a href="./promocoes/PORTEIRA-ABERTA/CAT-LEITE-ZEBU_compressed.pdf" target="_blank" class="btn btn-primary">
                     <i class="fa-solid fa-book"></i>
                     Catálogo
                   </a>
-                  <h6>Leite Europeu</h6>
-                  <a href="./promocoes/antecipa-estacao/PRECO-CONVENCIONAL-LEITE-EUROPEU.pdf" target="_blank" class="btn btn-primary">
+                  <h6>Corte Europeu</h6>
+                  <a href="./promocoes/PORTEIRA-ABERTA/PRECO-CORTE-EUROPEU.pdf" target="_blank" class="btn btn-primary">
                     <i class="fa-solid fa-file-invoice-dollar"></i>
-                    Preço Sêmen Convencional
+                    Preços - Convencional
                   </a>
-                  <a href="./promocoes/antecipa-estacao/PRECO-SEXADO-LEITE-EUROPEU.pdf" target="_blank" class="btn btn-primary">
+                  <a href="./promocoes/PORTEIRA-ABERTA/CAT-CORTE-EUROPEU_compressed.pdf" target="_blank" class="btn btn-primary">
+                    <i class="fa-solid fa-book"></i>
+                    Catálogo
+                  </a>
+                  <h6>Corte Zebu</h6>
+                  <a href="./promocoes/PORTEIRA-ABERTA/PRECO-CORTE-ZEBU.pdf" target="_blank" class="btn btn-primary">
                     <i class="fa-solid fa-file-invoice-dollar"></i>
-                    Preço Sêmen Sexado
+                    Preços - Convencional
                   </a>
-                  <a href="./promocoes/antecipa-estacao/CAT-LEITE-EUROPEU.pdf" target="_blank" class="btn btn-primary">
+                  <a href="./promocoes/PORTEIRA-ABERTA/CAT-CORTE-ZEBU.pdf" target="_blank" class="btn btn-primary">
                     <i class="fa-solid fa-book"></i>
                     Catálogo
                   </a>
@@ -307,7 +315,7 @@
       </div>
       <!--VALIDADE DA CAMPANHA - RADAPÉ-->
       <div class="card-footer text-body-secondary">
-        Validade: 29 de Fevereiro de 2024 (às 18:00h)
+        Validade: 31 de Março de 2024 (às 18:00h)
       </div>
     </div>
     <!--FIM DO BLOCO DA PROMOÇÃO-->
