--- a/condicao-comercial/condicao-comercial.html
+++ b/condicao-comercial/condicao-comercial.html
@@ -7,6 +7,7 @@
   <title>CRV LAGOA</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../style-navButton.css">
   <script src="https://kit.fontawesome.com/9dd9d649b8.js" crossorigin="anonymous"></script>
   <script type="text/javascript" src="../libs/jquery-3.6.0.min.js"></script>
   <script type="text/javascript" src="../libs/jquery.mask.min.js"></script>
@@ -66,6 +67,12 @@
               <li><a class="dropdown-item" target="_blank" href="http://rastreabilidade.crvbrasil.com.br/">
                   <i class="fa-solid fa-file-medical"></i>
                   Consultar Partida
+                </a>
+              </li>
+              <li>
+                <a class="dropdown-item" target="_blank" href="../servicos/Lista_Contatos_Internos_CRV_28-02-24 1.pdf">
+                  <i class="fa-solid fa-address-book"></i>
+                  Contatos CRV
                 </a>
               </li>
             </ul>
