ajuste de layout

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script src="https://kit.fontawesome.com/9dd9d649b8.js" crossorigin="anonymous"></script>
   <style>
     body {
-      background-color: aliceblue;
+      background-color: #eee;
     }
   </style>
 </head>
@@ -250,7 +250,7 @@
         <!--TÍTULO DA CAMPANHA-->
         <h5 class="card-title">Porteira Aberta</h5>
         <!--PASTA DE ATUAÇÃO DA CAMPANHA-->
-        <p class="card-text">CORTE ZEBU, CORTE EUROPEU E LEITE ZEBU</p>
+        <p class="card-text">CORTE ZEBU E EUROPEU <br> LEITE ZEBU</p>
       </div>
       <div class="card-body">
         <!--DCO-->
