--- a/condicao-comercial/condicao-comercial.html
+++ b/condicao-comercial/condicao-comercial.html
@@ -13,7 +13,7 @@
   <script type="text/javascript" src="../libs/jquery.mask.min.js"></script>
   <style>
     body {
-      background-color: aliceblue;
+      background-color: #eee;
     }
   </style>
 </head>
